@@ -28,102 +28,99 @@ import org.openehr.rm.datatypes.text.CodePhrase;
  */
 public class ArchetypeDescriptionTest extends ParserTestBase {
 
-    /**
-     * Create new test case
-     *
-     * @param test
-     * @throws Exception
-     */
-    public ArchetypeDescriptionTest(String test) throws Exception {
-        super(test);
-    }
-    
-    public void setUp() throws Exception {
-    	ADLParser parser = new ADLParser(loadFromClasspath(
-        	"adl-test-entry.archetype_description.test.adl"));
-    	Archetype archetype = parser.parse();
-    	description = archetype.getDescription();
-    }
-    
-    public void tearDown() throws Exception {
-    	description = null;
-    }
+	/**
+	 * Verifies the content of description instance after parsing
+	 * 
+	 * @throws Exception
+	 */
+	public void testArchetypeDescription() throws Exception {
+		ADLParser parser = new ADLParser(
+				loadFromClasspath("adl-test-entry.archetype_description.test.adl"));
+		Archetype archetype = parser.parse();
+		ResourceDescription description = archetype.getDescription();
 
-    /**
-     * Verifies the content of description instance after parsing
-     * 
-     * @throws Exception
-     */
-    public void testArchetypeDescription() throws Exception {
-    	assertNotNull("description null", description);
-        Map<String, String> originalAuthor = description.getOriginalAuthor();
-        assertEquals("name wrong", "Sam Heard", originalAuthor.get("name"));
-        assertEquals("organisation wrong", "Ocean Informatics", 
-        		originalAuthor.get("organisation"));
-        assertEquals("date wrong", "23/04/2006", originalAuthor.get("date"));
-        assertEquals("email wrong", 
-        		"sam.heard@oceaninformatics.biz", originalAuthor.get("email"));
-        
-        List<String> otherContributors = description.getOtherContributors();
-        assertNotNull(otherContributors);
-        assertEquals(2, otherContributors.size());
-        assertEquals("Author1", otherContributors.get(0));
-        assertEquals("Author2", otherContributors.get(1));
-        
-        assertEquals("lifecycleState wrong", "AuthorDraft", 
-        		description.getLifecycleState());
-        
-        // archetype_package_uri in ADL 
-        assertEquals("resourcePackageUri", 
-        		"www.aihw.org.au/data_sets/diabetic_archetypes.html", 
-        		description.getResourcePackageUri());
-        
-        // TODO: other_details
-        // TODO: parent_resource
-    }
-    
-    /**
-     * Verifies the content of archetype description item
-     * 
-     * @throws Exception
-     */
-    public void testArchetypeDescriptionItem() throws Exception {
-        List<ResourceDescriptionItem> details = description.getDetails();
-        assertNotNull("details null", details);
-        assertEquals("details size wrong", 1, details.size());
-        
-        ResourceDescriptionItem item = details.get(0);
-        assertNotNull("descriptionItem null", item);
-        CodePhrase language = new CodePhrase("languages", "en");
-        assertEquals("language wrong", language, item.getLanguage());
-        
-        assertEquals("purpose wrong", "For recording a problem, condition or" +
-        		" issue that has ongoing significance to the person's health.", 
-        		item.getPurpose());
-        
-        assertEquals("use wrong", "Used for recording any problem, present or" +
-        		" past - so is used for recording past history as well as " +
-        		"current problems. Used with changed 'Subject of care' for " +
-        		"recording problems of relatives and so for family history.", 
-        		item.getUse());
-        
-        assertEquals("misuse wrong", "Use specialisations for medical " +
-        		"diagnoses, 'openEHR-EHR-EVALUATION.problem-diagnosis' and " +
-        		"histological diagnoses 'openEHR-EHR-EVALUATION.problem-" +
-        		"diagnosis-histological'", item.getMisuse());
-        
-        assertEquals("copyright wrong", "copyright (c) 2004 The openEHR " +
-        		"Foundation", item.getCopyright());
-        
-        List<String> keywords = new ArrayList<String>();
-        keywords.add("issue");
-        keywords.add("condition");
-        assertEquals("keywords wrong", keywords, item.getKeywords());
-        
-        // TODO: original_resource_uri
-        // TODO: other_details
-    }
-    
-    private ResourceDescription description;
+		assertNotNull("description null", description);
+		Map<String, String> originalAuthor = description.getOriginalAuthor();
+		assertEquals("name wrong", "Sam Heard", originalAuthor.get("name"));
+		assertEquals("organisation wrong", "Ocean Informatics", originalAuthor
+				.get("organisation"));
+		assertEquals("date wrong", "23/04/2006", originalAuthor.get("date"));
+		assertEquals("email wrong", "sam.heard@oceaninformatics.biz",
+				originalAuthor.get("email"));
+
+		List<String> otherContributors = description.getOtherContributors();
+		assertNotNull(otherContributors);
+		assertEquals(2, otherContributors.size());
+		assertEquals("Author1", otherContributors.get(0));
+		assertEquals("Author2", otherContributors.get(1));
+
+		assertEquals("lifecycleState wrong", "AuthorDraft", description
+				.getLifecycleState());
+
+		// archetype_package_uri in ADL 
+		assertEquals("resourcePackageUri",
+				"www.aihw.org.au/data_sets/diabetic_archetypes.html",
+				description.getResourcePackageUri());
+
+		// TODO: other_details
+		// TODO: parent_resource
+
+		List<ResourceDescriptionItem> details = description.getDetails();
+		assertNotNull("details null", details);
+		assertEquals("details size wrong", 1, details.size());
+
+		ResourceDescriptionItem item = details.get(0);
+		assertNotNull("descriptionItem null", item);
+		CodePhrase language = new CodePhrase("languages", "en");
+		assertEquals("language wrong", language, item.getLanguage());
+
+		assertEquals(
+				"purpose wrong",
+				"For recording a problem, condition or"
+						+ " issue that has ongoing significance to the person's health.",
+				item.getPurpose());
+
+		assertEquals("use wrong", "Used for recording any problem, present or"
+				+ " past - so is used for recording past history as well as "
+				+ "current problems. Used with changed 'Subject of care' for "
+				+ "recording problems of relatives and so for family history.",
+				item.getUse());
+
+		assertEquals("misuse wrong", "Use specialisations for medical "
+				+ "diagnoses, 'openEHR-EHR-EVALUATION.problem-diagnosis' and "
+				+ "histological diagnoses 'openEHR-EHR-EVALUATION.problem-"
+				+ "diagnosis-histological'", item.getMisuse());
+
+		assertEquals("copyright wrong", "copyright (c) 2004 The openEHR "
+				+ "Foundation", item.getCopyright());
+
+		List<String> keywords = new ArrayList<String>();
+		keywords.add("issue");
+		keywords.add("condition");
+		assertEquals("keywords wrong", keywords, item.getKeywords());
+
+		// TODO: original_resource_uri
+		// TODO: other_details
+	}
+
+	public void testParseOriginalAuthorAsLast() throws Exception {
+		ADLParser parser = new ADLParser(
+				loadFromClasspath("adl-test-entry.archetype_description2.test.adl"));
+		try {
+			parser.parse();
+		} catch (Exception e) {
+			e.printStackTrace();
+			fail("failed to parse original author as last");
+		}
+	}
+
+	public void testParseEmptyOtherContributors() throws Exception {
+		ADLParser parser = new ADLParser(
+				loadFromClasspath("adl-test-entry.empty_other_contributors.test.adl"));
+		Archetype archetype = parser.parse();
+		assertNotNull("failed to parse empty other contributors", archetype);
+		assertNull("other_contributors not null", archetype.getDescription()
+				.getOtherContributors());
+	}
+
 }
-
